# ChangeLog for sys-apps/grep
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/grep/ChangeLog,v 1.94 2010/03/27 04:48:51 vapier Exp $

*grep-2.6.1 (27 Mar 2010)

  27 Mar 2010; Mike Frysinger <vapier@gentoo.org> +grep-2.6.1.ebuild,
  +files/grep-2.6.1-no-french.patch:
  Version bump.

*grep-2.6 (23 Mar 2010)

  23 Mar 2010; Mike Frysinger <vapier@gentoo.org> +grep-2.6.ebuild:
  Version bump. Fixes #232041 #269734 #274436 #283574.

  22 Oct 2009; Peter Alfredsen <loki_val@gentoo.org> -grep-2.5.1a-r1.ebuild,
  -grep-2.5.3-r1.ebuild, -grep-2.5.4.ebuild:
  Punt old versions which depend on old libpcre.

  04 Jul 2009; nixnut <nixnut@gentoo.org> grep-2.5.4-r1.ebuild:
  ppc stable #273037

  19 Jun 2009; Brent Baude <ranger@gentoo.org> grep-2.5.4-r1.ebuild:
  stable ppc64, bug 273037

  11 Jun 2009; Markus Meier <maekke@gentoo.org> grep-2.5.4-r1.ebuild:
  amd64 stable, bug #273037

  11 Jun 2009; Raúl Porcel <armin76@gentoo.org> grep-2.5.4-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #273037

  09 Jun 2009; Christian Faulhammer <fauli@gentoo.org> grep-2.5.4-r1.ebuild:
  stable x86, bug 273037

  08 Jun 2009; Ferris McCormick <fmccor@gentoo.org> grep-2.5.4-r1.ebuild:
  Sparc stable, Bug #273037.

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org> grep-2.5.4-r1.ebuild:
  Stable for HPPA (bug #273037).

*grep-2.5.4-r1 (09 Apr 2009)

  09 Apr 2009; Peter Alfredsen <loki_val@gentoo.org> grep-2.5.1a-r1.ebuild,
  grep-2.5.3-r1.ebuild, grep-2.5.4.ebuild, +grep-2.5.4-r1.ebuild:
  Revision bump for new libpcre. We can now use libpcre.so since it's in
  /lib - bug 1638 and bug 53627. Change DEPENDS of previous versions to
  reflect this, since new libpcre no longer includes .a archives.

  11 Mar 2009; Timothy Redaelli <drizzt@gentoo.org> grep-2.5.4.ebuild:
  Add ~amd64-fbsd keyword.
  Readd the nls patch (#253777)

  11 Feb 2009; Mike Frysinger <vapier@gentoo.org> grep-2.5.4.ebuild: