@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/grep
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/grep/ChangeLog,v 1.94 2010/03/27 04:48:51 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/grep/ChangeLog,v 1.95 2010/03/29 21:05:58 vapier Exp $
+
+*grep-2.6.2 (29 Mar 2010)
+
+  29 Mar 2010; Mike Frysinger <vapier@gentoo.org> +grep-2.6.2.ebuild:
+  Version bump.
 
 *grep-2.6.1 (27 Mar 2010)
 
